--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -3,8 +3,10 @@
 one:
   subject: MyString
   content: MyText
+  slug:  'mystring-1'
 
 two:
   subject: MyString
   content: MyText
+  slug:  'mystring-2'
 
