--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,8 @@
 development:
   adapter: postgresql
   database: blog_development
-  username: ichigo
+  username: metheuser
+  password: 123qwe
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -10,6 +11,7 @@ development:
 test: &test
   adapter: postgresql
   database: blog_test
-  username: ichigo
+  username: metheuser
+  password: 123qwe
   host: localhost
 
